audioconvert: Don't call transform_ip() in passthrough mode

https://bugzilla.gnome.org/show_bug.cgi?id=775369